--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Registration Exercise</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css"    />
+    <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
