added images and styling for desktop on homepage and welcome page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="main">
       <div class="heading">
+        <img class="love-knitting" src="images/logo-loveknitting.svg">
         <h1 class="heading-text">Registration Exercise</h1>
       </div>
       <section class="register-form">
