icons in the header now change in mobile view, loading spinner added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="main">
       <div class="heading">
         <img class="love-knitting" src="images/logo-loveknitting.svg">
+        <img class="love-knitting-sm" src="images/logo-loveknitting-sm.svg">
         <h1 class="heading-text">Registration Exercise</h1>
       </div>
       <section class="register-form">
@@ -41,6 +42,7 @@
 
           <div class="form-element">
             <button id="register-button" class="register-button" type="submit">Register</button>
+            <img id="loading-spinner" class="loading-spinner" src="images/spinner.svg">
           </div>
         </form>
 
